--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
-{ 
+{
+  "homepage": "http://ankit-pro01.github.io/React-App-UserDataDisplay",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
